Fixed checkIcon bug
Learnt about mouseenter and mouseout event.relatedTarget attribute
I had to target this because the event listener was bugging out
if you moved the cursor too much over the check icon.
Had to ensure it only fired when the mouse was moved onto the
list item...
This resulted in the tick being removed even if the cursor was
still on the icon......

--- a/src/main.css
+++ b/src/main.css
@@ -440,14 +440,16 @@ main {
     align-items: center;
     grid-column: 1/2;
     border: solid aqua 2px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
     height: 15px;
     width: 15px;
     border-radius: 50%;
+    z-index:2
 }
 
 .tick {
     position:absolute;
+    z-index:1;
     left:1.5px;
     font-size: 9px;
 }
